ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: cce
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: cloud-cadavre-exquis-dispatcher
                port:
                  number: 80
            path: /
            pathType: Prefix
