ingress_old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: cce
  annotations:
    traefik.ingress.kubernetes.io/router-name: traefik-web
    traefik.ingress.kubernetes.io/rule: Host:cce.com
spec:
  rules:
    - host: test.w1.thenets.org
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: cloud-cadavre-exquis-dispatcher
                port:
                  number: 80
---
